--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,6 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter-api</artifactId>-->
-<!--            <version>5.7.2</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
@@ -31,24 +24,24 @@
     </dependencies>
     <build>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>edu.illinois.cs</groupId>-->
-<!--                <artifactId>testrunner-maven-plugin</artifactId>-->
-<!--                <version>1.2</version>-->
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>edu.illinois.cs</groupId>-->
-<!--                        <artifactId>idflakies</artifactId>-->
-<!--                        &lt;!&ndash; Use iDFlakies from Maven Central &ndash;&gt;-->
-<!--                        <version>1.1.0</version>-->
-<!--                        &lt;!&ndash; Use the following version instead if you build iDFlakies locally and want to use the locally built version. &ndash;&gt;-->
-<!--                        &lt;!&ndash; <version>1.2.0-SNAPSHOT</version> &ndash;&gt;-->
-<!--                    </dependency>-->
-<!--                </dependencies>-->
-<!--                <configuration>-->
-<!--                    <className>edu.illinois.cs.dt.tools.detection.DetectorPlugin</className>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>edu.illinois.cs</groupId>
+                <artifactId>testrunner-maven-plugin</artifactId>
+                <version>1.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>edu.illinois.cs</groupId>
+                        <artifactId>idflakies</artifactId>
+                        <!-- Use iDFlakies from Maven Central -->
+                        <version>1.1.0</version>
+                        <!-- Use the following version instead if you build iDFlakies locally and want to use the locally built version. -->
+                        <!-- <version>1.2.0-SNAPSHOT</version> -->
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <className>edu.illinois.cs.dt.tools.detection.DetectorPlugin</className>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
